--- a/SpringBoot/Docker201/src/main/resources/application-testing.properties
+++ b/SpringBoot/Docker201/src/main/resources/application-testing.properties
@@ -2,7 +2,7 @@ debug=true
 server.port=9091
 spring.profiles.active=testing
 nl.amis.environment=testing
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://mysql-service.nl-amis-testing/test
 spring.datasource.username=test
 spring.datasource.password=test
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
