--- a/SpringBoot/Docker201/src/main/resources/application-testing.properties
+++ b/SpringBoot/Docker201/src/main/resources/application-testing.properties
@@ -3,8 +3,8 @@ server.port=9091
 spring.profiles.active=testing
 nl.amis.environment=testing
 spring.datasource.url=jdbc:mysql://mysql-service.nl-amis-testing/test
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=root
+spring.datasource.password=root123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
