--- a/SpringBoot/Docker201/src/main/resources/application.properties
+++ b/SpringBoot/Docker201/src/main/resources/application.properties
@@ -2,8 +2,8 @@ debug=true
 server.port=9091
 nl.amis.environment=testing
 spring.datasource.url=jdbc:mysql://mysql:3306/test
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=root
+spring.datasource.password=root123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
